--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,26 @@ body {
     margin-bottom: 20px;
 }
 
+.logo {
+    float: left;
+}
+
+.logo h1 {
+    font-size: 24px;
+}
+
+.nav {
+    float: right;
+}
+
+.nav a {
+    color: white;
+    text-decoration: none;
+    margin-left: 20px;
+    padding: 5px 10px;
+}
+
+.nav a:hover {
+    background: #34495e;
+    border-radius: 3px;
+}
