--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
+    font-family: cursive, sans-serif;
+    line-height: left;
     color: #333;
 }
 
