--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,10 @@ body {
 }
 
 .header {
-    background: #2c3e50;
+    background: #FF7F49;
     color: white;
     padding: 50px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 .logo {
