--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 
 .header {
     background: #FF7F49;
-    color: white;
+    color: #3C2A0B;
     padding: 50px;
     margin-bottom: 50px;
 }
