--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,9 @@
 }
 
 body {
-    margin-left: auto;
+    margin-left: 20px;
     font-size: 25;
     font-family: cursive, sans-serif;
-    line-height: left;
     color: #333;
 }
 
